--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,13 @@ before_install:
   - git clone https://github.com/shadowsocks/libQtShadowsocks.git
   - mkdir libQtShadowsocks/build
   - cd libQtShadowsocks/build
-  - cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DQt5Core_DIR="/opt/qt56/lib/cmake/Qt5Core" -DQt5Network_DIR="/opt/qt56/lib/cmake/Qt5Network" -DQt5Test_DIR="/opt/qt56/lib/cmake/Qt5Test"
+  - cmake .. -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:STRING=/usr/bin/g++ -DCMAKE_C_COMPILER:STRING=/usr/bin/gcc -DCMAKE_PREFIX_PATH:STRING=/home/huyi/merara/Qt5.14.2/5.14.2/gcc_64 -DQT_QMAKE_EXECUTABLE:STRING=/home/huyi/merara/Qt5.14.2/5.14.2/gcc_64/bin/qmake -DQt5Core_DIR="/opt/qt56/lib/cmake/Qt5Core" -DQt5Network_DIR="/opt/qt56/lib/cmake/Qt5Network" -DQt5Test_DIR="/opt/qt56/lib/cmake/Qt5Test"
   - make
   - sudo make install
   - cd -
 
 script:
   - mkdir build && cd build
-  - cmake .. -DQt5Core_DIR="/opt/qt56/lib/cmake/Qt5Core" -DQt5Network_DIR="/opt/qt56/lib/cmake/Qt5Network" -DQt5Gui_DIR="/opt/qt56/lib/cmake/Qt5Gui" -DQt5Widgets_DIR="/opt/qt56/lib/cmake/Qt5Widgets" -DQt5DBus_DIR="/opt/qt56/lib/cmake/Qt5DBus"
+  - cmake .. -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:STRING=/usr/bin/g++ -DCMAKE_C_COMPILER:STRING=/usr/bin/gcc -DCMAKE_PREFIX_PATH:STRING=/home/huyi/merara/Qt5.14.2/5.14.2/gcc_64 -DQT_QMAKE_EXECUTABLE:STRING=/home/huyi/merara/Qt5.14.2/5.14.2/gcc_64/bin/qmake -DQt5Core_DIR="/opt/qt56/lib/cmake/Qt5Core" -DQt5Network_DIR="/opt/qt56/lib/cmake/Qt5Network" -DQt5Gui_DIR="/opt/qt56/lib/cmake/Qt5Gui" -DQt5Widgets_DIR="/opt/qt56/lib/cmake/Qt5Widgets" -DQt5DBus_DIR="/opt/qt56/lib/cmake/Qt5DBus"
   - make
 
